// file: proto/gcommon/v1/metrics/types/error_type_count.proto
// version: 1.0.0
// guid: 8116a2bc-950e-407c-9db8-2f3985e9394d

edition = "2023";

package gcommon.v1.metrics.types;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package gcommon.v1.metrics.types;

message ErrorTypeCount {
  string error_type = 1;
  int64 count = 2;
  double percentage = 3;
}
