// file: proto/gcommon/v1/organization/messages/notification_settings.proto
// version: 1.0.0
// guid: 5c93685f-3692-4596-bb11-a848cfce9365

edition = "2023";

package gcommon.v1.organization;


import "google/protobuf/go_features.proto";
import "gcommon/v1/organization/messages/email_template.proto";
import "gcommon/v1/organization/messages/notification_frequency.proto";



option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization";

message OrganizationNotificationSettings {
  // Default email sender address for organization notifications
  string sender_email = 1;

  // Default email sender name
  string sender_name = 2;

  // Whether email notifications are enabled
  bool email_enabled = 3;

  // Whether SMS notifications are enabled
  bool sms_enabled = 4;

  // Whether in-app notifications are enabled
  bool in_app_enabled = 5;

  // Email template customizations
  repeated gcommon.v1.organization.EmailTemplate email_templates = 6;

  // Notification frequency settings
  gcommon.v1.organization.NotificationFrequency frequency = 7;
}
